--- a/src/app.css
+++ b/src/app.css
@@ -2,4 +2,27 @@
 
 @tailwind base;
 @tailwind components;
+
+@layer base {
+  body {
+    @apply font-sansSerif;
+  }
+
+  svg {
+    @apply fill-current;
+  }
+}
+
+@layer components {
+  .invoice-table {
+    @apply mb-3 grid w-full grid-cols-invoiceTableMobile gap-x-4 px-4 lg:grid-cols-invoiceTable lg:px-6;
+  }
+}
+
+.center {
+  @apply flex items-center justify-center;
+}
+
 @tailwind utilities;
+@layer utilities {
+}
