--- a/src/app.css
+++ b/src/app.css
@@ -13,8 +13,8 @@
     @apply block font-sansSerif text-base font-bold text-monsoon;
   }
 
-  input[type='text']:not(.search),
-  input[type='number'],
+  input[type='text']:not(.search):not(.line-item),
+  input[type='number']:not(.line-item),
   input[type='date'],
   input[type='password'],
   input[type='email'] {
@@ -29,8 +29,8 @@
     @apply h-14 w-full appearance-none rounded-lg border-2 border-silver bg-chevronDown bg-right-center bg-no-repeat p-4;
   }
 
-  input[type='text']:not(.search):focus,
-  input[type='number']:focus,
+  input[type='text']:not(.search):not(.line-item):focus,
+  input[type='number']:not(.line-item):focus,
   input[type='date']:focus,
   input[type='password']:focus,
   input[type='email']:focus,
@@ -47,6 +47,10 @@
 @layer components {
   .invoice-table {
     @apply mb-3 grid w-full grid-cols-invoiceTableMobile gap-x-4 px-4 lg:grid-cols-invoiceTable lg:px-6;
+  }
+
+  .invoice-line-item {
+    @apply grid grid-cols-invoiceLineItem gap-x-5;
   }
 
   .field {
