--- a/src/app.css
+++ b/src/app.css
@@ -39,6 +39,11 @@
         @apply border-2 border-lavenderIndigo outline-none;
     }
 
+    input[type='number']:disabled {
+        @apply appearance-none;
+        -moz-appearance: textField;
+    }
+
     svg {
         @apply fill-current;
     }
